# service/userservice.go
@@ -2,12 +2,13 @@ package service
 
 import (
 	"gochat/models"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 // GetUserList
-// @Sunmmary 用户列表
+// @Summary 用户列表
 // @Tags 用户模块
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/getUserList [get]
@@ -20,7 +21,7 @@ func GetUserList(c *gin.Context) {
 }
 
 // CreateUser
-// @Sunmmary 新增用户
+// @Summary 新增用户
 // @Tags 用户模块
 // @param name query string false "用户名"
 // @param password query string false "密码"
@@ -44,4 +45,43 @@ func CreateUser(c *gin.Context) {
 		})
 	}
 
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "id"
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @Success 200 {string} json{"code", "删除成功"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "删除成功",
+	})
+}
+
+// UpdateUser
+// @Summary 修改用户信息
+// @Tags 用户模块
+// @param id formData string false "id"
+// @param name formData string false "用户名"
+// @param password formData string false "密码"
+// @Success 200 {string} json{"code", "修改成功"}
+// @Router /user/updateUser [post]
+func UpdateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+
+	models.UpdateUser(user)
+	c.JSON(200, gin.H{
+		"message": "修改成功",
+	})
 }
